fix z-index links in header component

--- a/src/app/[lng]/news/[newsSlug]/styles.module.scss
+++ b/src/app/[lng]/news/[newsSlug]/styles.module.scss
@@ -7,6 +7,7 @@
   background-size: cover !important;
   background-repeat: no-repeat !important;
   background-position: center !important;
+  z-index: 1;
 }
 .overlay {
   width: 100%;
@@ -15,7 +16,7 @@
   top: 0px;
   left: 0px;
   background: rgba(0, 0, 0, 0.5);
-  z-index: 10;
+  z-index: 1;
 }
 .TopContent {
   @include pageContent;
