--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -1,73 +1,85 @@
 @import "@/styles/variables.scss";
 
 .container {
-    @include pageWrapper;
+  @include pageWrapper;
+  z-index: 99999;
+
+  a {
     z-index: 99999;
+  }
 }
 .content {
-    @include pageContent;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 35px;
-    padding-bottom: 35px;
-    position: absolute;
+  @include pageContent;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 35px;
+  padding-bottom: 35px;
+  position: absolute;
+  color: #fff;
+  z-index: 99999;
+  a {
     color: #fff;
-    a {
-        color: #fff;
-    }
-    @media (max-width: 1024px) {
-    }
+  }
+  @media (max-width: 1024px) {
+  }
 }
 .logoLink {
+  height: 17px;
+  width: auto;
+  z-index: 99999;
+  img {
     height: 17px;
     width: auto;
+  }
+  @media (max-width: 542px) {
+    height: 14px;
     img {
-        height: 17px;
-        width: auto;
+      height: 14px;
     }
-    @media (max-width: 542px) {
-        height: 14px;
-        img {
-            height: 14px;
-        }
-    }
+  }
 }
 .DesctopMenuContainer {
-    @media (max-width: 1024px) {
-        display: none;
-    }
+  z-index: 99999;
+  @media (max-width: 1024px) {
+    display: none;
+  }
 }
 .mopbileMenuToggler {
-    display: none;
-    @media (max-width: 1024px) {
-        display: block;
-    }
+  display: none;
+  z-index: 99999;
+  @media (max-width: 1024px) {
+    display: block;
+  }
 }
 .langPicker {
-    position: relative;
-    display: block;
-    @media (max-width: 1024px) {
-        display: none;
-    }
+  z-index: 99999;
+  position: relative;
+  display: block;
+  @media (max-width: 1024px) {
+    display: none;
+  }
 }
 .currLocale {
-    display: flex;
-    gap: 8px;
-    align-items: center;
-    width: 100%;
-    position: relative;
-    z-index: 100;
+  z-index: 99999;
+  display: flex;
+  gap: 8px;
+  align-items: center;
+  width: 100%;
+  position: relative;
+  z-index: 100;
 }
 .dropdown {
-    margin-top: 12px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 12px;
-    position: absolute;
+  z-index: 99999;
+  margin-top: 12px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 12px;
+  position: absolute;
 }
 .localeItem {
-    color: #fff;
-    cursor: pointer;
+  z-index: 99999;
+  color: #fff;
+  cursor: pointer;
 }
